samples/_failures_safe/1761145923_a33a23_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_758f94c8.c: In function ‘main’:
./samples/SAFE/__tmp_758f94c8.c:154:5: error: expected expression at end of input
  154 |     graph_add_edge(&g, 1, 3,
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_758f94c8.c:154:5: error: expected declaration or statement at end of input
